--- a/index.html
+++ b/index.html
@@ -121,25 +121,22 @@
               08:15 AM - 08:30 AM
             </div>
             <div class="col-12 col-sm-8">
-              <strong>To be updated</strong>
+              <strong>Opening</strong>
             </div>
-          </div>
-		<!--  
+          </div>	
           <div class="row py-3 border-bottom">
             <div class="col-12 col-sm-4 text-left text-sm-right">
               8:30 AM - 09:15 AM
             </div>
             <div class="col-12 col-sm-8">
               <p class="mb-0">
-                <strong>Azure Fundamentals</strong>
+                <strong>Microsoft Entra ID for developers</strong>
               </p>
               <p class="mb-0">
                 <a href="#thien-nguyen">Thien Nguyen</a>
               </p>
               <p class="mb-0">
-                Learn/strengthen core concepts of Azure, common Azure services, how to create and manage Azure resources
-                effectively.
-                In this talk we also discuss about a roadmap to become an Azure Solution Architect.
+		Learning basic concepts of Microsoft Entra ID (formerly known as Azure Active Directory) how to manage role-based access control Azure and how to implement Single Sign-On (SSO) for your applications with Entra ID
               </p>
             </div>
           </div>
@@ -149,29 +146,17 @@
             </div>
             <div class="col-12 col-sm-8">
               <p class="mb-0">
-                <strong>Streamline software application development with Dapr on Azure</strong>
+                <strong>Seamlessly Integrating Azure Kubernetes Service with Azure KeyVault Using Workload Identity</strong>
               </p>
               <p class="mb-0">
-                <a href="#thang-chung">Thang Chung</a>
+                <a href="#phuc-nguyen">Phuc Nguyen</a>
               </p>
               <p class="mb-0">
-                The presentation walks you through the journey of software architecture and patterns for decoupling
-                components and the principle of "last responsible moment" which is the bedrock of building evolutionary
-                architectures. It paves the way for delaying architectural decisions which gives us replaceable and
-                composable apps at runtime.
-                <br />
-                Dapr jumps into this game to help coordinate between the development and operation tasks in the
-                application life cycle as well as enable event-driven communication between distributed apps with
-                replaceable specific message brokers.
-                <br />
-                Finally, the presentation will show you how to run the distributed apps on local development and deploy
-                them to the Azure cloud platform without changing any business logic code in the application.
-                <br />
-                <b>Slides: <a
-                    href="presentations/GlobalAzure2023_ThangChung_StreamlineMicroservicesDevelopmentWithDapr.pdf">GlobalAzure2023_ThangChung_StreamlineMicroservicesDevelopmentWithDapr.pdf</b></a>
+                
               </p>
             </div>
           </div>
+		<!--  
           <div class="row py-3 border-bottom">
             <div class="col-12 col-sm-4 text-left text-sm-right">
               10:00 AM - 10:45 AM
