--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <a href="#thien-nguyen">Thien Nguyen</a>
               </p>
               <p class="mb-0">
-		Learning basic concepts of Microsoft Entra ID (formerly known as Azure Active Directory). How to manage role-based access control in Azure and how to implement Single Sign-On (SSO) for your applications with Entra ID.
+		Learn basic concepts of Microsoft Entra ID (formerly known as Azure Active Directory). How to manage role-based access control in Azure and how to implement Single Sign-On (SSO) for your applications with Entra ID.
               </p>
             </div>
           </div>
