feat: add phucnt info

--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta property="og:title" content="Global Azure 2024 - Vietnam" />
   <meta property="og:image" content="images/globalazure-vn-2024.jpg" />
-  <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.2/css/bootstrap.min.css"
+    integrity="sha512-rt/SrQ4UNIaGfDyEXZtNcyWvQeOq0QLygHluFQcSjaGB04IxWhal71tKuzP6K8eYXYB6vJV4pHkXcmFGGQ1/0w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/2.1.1/animate.css"
+    integrity="sha512-cI+i7wwdBIc67hY3B21jZwG2gSoCMIWanuP+efgwkQ1e6J/ZkzLH3l4YWlY2zPKlORmHmPhAGvs5/tSTD3/PDA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"
+    integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <link rel="stylesheet" href="css/animate.css" />
-  <link rel="stylesheet" href="css/slick.css" />
   <link rel="stylesheet" href="js/rs-plugin/css/settings.css" />
   <link rel="stylesheet" href="css/site.css" />
   <link rel="stylesheet" href="css/custom.css" />
@@ -23,7 +31,8 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="images/globalazure-vn-logo-2024.png" alt="" class="logo" /></a>
+        <a class="navbar-brand" href="#"><img src="images/globalazure-vn-logo-2024.png" alt="Global Azure VN logo"
+            class="logo" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -56,7 +65,8 @@
           <div class="row">
             <div class="col-md-12">
               <div id="divTimer" class="countdown"></div>
-                <a href="https://forms.office.com/r/YvE5qzGC00" target="_blank" class="btn btn-primary register">register</a>
+              <a href="https://forms.office.com/r/YvE5qzGC00" target="_blank"
+                class="btn btn-primary register">register</a>
             </div>
           </div>
         </div>
@@ -123,7 +133,7 @@
             <div class="col-12 col-sm-8">
               <strong>Opening</strong>
             </div>
-          </div>	
+          </div>
           <div class="row py-3 border-bottom">
             <div class="col-12 col-sm-4 text-left text-sm-right">
               8:30 AM - 09:15 AM
@@ -136,7 +146,9 @@
                 <a href="#thien-nguyen">Thien Nguyen</a>
               </p>
               <p class="mb-0">
-		Learn basic concepts of Microsoft Entra ID (formerly known as Azure Active Directory). How to manage role-based access control in Azure and how to implement Single Sign-On (SSO) for your applications with Entra ID.
+                Learn basic concepts of Microsoft Entra ID (formerly known as Azure Active Directory). How to manage
+                role-based access control in Azure and how to implement Single Sign-On (SSO) for your applications with
+                Entra ID.
               </p>
             </div>
           </div>
@@ -146,79 +158,21 @@
             </div>
             <div class="col-12 col-sm-8">
               <p class="mb-0">
-                <strong>Seamlessly Integrating Azure Kubernetes Service with Azure KeyVault Using Workload Identity</strong>
+                <strong>Seamlessly Integrating Azure Kubernetes Service with Azure KeyVault Using Workload
+                  Identity</strong>
               </p>
               <p class="mb-0">
                 <a href="#phuc-nguyen">Phuc Nguyen</a>
               </p>
               <p class="mb-0">
-                
+                Learn to deploy an AKS cluster with OpenID Connect (OIDC) issuer and managed identity, creating a Key
+                Vault and secret, and configuring the managed identity for token federation. This integration allows
+                workloads on AKS to securely access Azure resources like KeyVault using Kubernetes service accounts and
+                Microsoft Entra Workload ID.
               </p>
             </div>
           </div>
-		<!--  
-          <div class="row py-3 border-bottom">
-            <div class="col-12 col-sm-4 text-left text-sm-right">
-              10:00 AM - 10:45 AM
-            </div>
-            <div class="col-12 col-sm-8">
-              <p class="mb-0">
-                <strong>Simplify your deployment with Azure container app</strong>
-              </p>
-              <p class="mb-0">
-                <a href="#long-chang">Long Chang</a>
-              </p>
-              <p class="mb-0">
-                Azure Container Apps is a fully managed environment that enables you to run microservices and
-                containerized applications on a serverless platform
-              </p>
-              <p class="mb-1">
-                Reducing the complexity of k8s, learning curve and improve productivity when you running microservices
-                or any high resilience and high available applications. Ignore K8s things and leave it to azure.
-              </p>
-              <p class="mb-0">
-                we Introduce some key point as below:
-              <ul>
-                <li>
-                  How to deploy to Azure container App
-                </li>
-                <li>
-                  Deploy Simple Api, With ingest http
-                </li>
-                <li>
-                  Services Commmunication with Dapr
-                </li>
-                <li>
-                  Basic Scale & scale with keda
-                </li>
-                <li>
-                  Connect Services
-                </li>
-              </ul>
-              </p>
-            </div>
-          </div>
-          <div class="row py-3 border-bottom">
-            <div class="col-12 col-sm-4 text-left text-sm-right">
-              10:45 AM - 11:30 AM
-            </div>
-            <div class="col-12 col-sm-8">
-              <p class="mb-0">
-                <strong>Discover the power of Azure OpenAI service</strong>
-              </p>
-              <p class="mb-0">
-                <a href="#phi-huynh">Phi Huynh</a>
-              </p>
-              <p class="mb-0">
-                In this session, we discover the power of Generative AI by using the large-scale models such as GPT-3.5,
-                GPT-4, Codex, DALL-E, ... to unlock new scenarios for businesses. We also discover on how to custom AI
-                models fine-tuned with your data hyperparameters to fit into your business and integrate with other
-                Azure services.
-              </p>
-            </div>
-          </div>
-        -->
-		</div>
+        </div>
       </div>
     </section>
     <section id="speakers" class="container content-section">
@@ -231,7 +185,7 @@
           <div id="thien-nguyen" class="col-12 col-sm-6 mb-5">
             <div class="row">
               <div class="col-12 col-sm-4">
-                <img class="w-100 mb-3 round" src="images/speakers/thien_nguyen.png" />
+                <img class="w-100 mb-3 round" src="images/speakers/thien_nguyen.png" alt="Thien Nguyen" />
               </div>
               <div class="col-12 col-sm-8">
                 <h3>Thien Nguyen</h3>
@@ -243,12 +197,15 @@
                   current interests are .NET Core, Java, Azure and Microservices
                 </p>
                 <p>
-                  <a href="https://thienn.com" class="speakersocial"><i class="fa fa-rss fa-fw"
-                      aria-hidden="true"></i></a>
-                  <a href="https://www.linkedin.com/in/thiennn" class="speakersocial"><i
-                      class="fa fa-linkedin fa-fw"></i></a>
-                  <a href="https://www.facebook.com/thiennlq" class="speakersocial"><i
-                      class="fa fa-facebook fa-fw"></i></a>
+                  <a href="https://thienn.com" class="speakersocial">
+                    <i class="fa fa-rss fa-fw"></i>
+                  </a>
+                  <a href="https://www.linkedin.com/in/thiennn" class="speakersocial">
+                    <i class="fa fa-linkedin fa-fw"></i>
+                  </a>
+                  <a href="https://www.facebook.com/thiennlq" class="speakersocial">
+                    <i class="fa fa-facebook fa-fw"></i>
+                  </a>
                 </p>
               </div>
             </div>
@@ -256,7 +213,7 @@
           <div id="thang-chung" class="col-12 col-sm-6 mb-5">
             <div class="row">
               <div class="col-12 col-sm-4">
-                <img class="w-100 mb-3 round" src="images/speakers/thang_chung.png" />
+                <img class="w-100 mb-3 round" src="images/speakers/thang_chung.png" alt="Thang Chung" />
               </div>
               <div class="col-12 col-sm-8">
                 <h3>Thang Chung</h3>
@@ -282,7 +239,7 @@
           <div id="phi-huynh" class="col-12 col-sm-6 mb-5">
             <div class="row">
               <div class="col-12 col-sm-4">
-                <img class="w-100 mb-3 round" src="images/speakers/phi_huynh.jpg" />
+                <img class="w-100 mb-3 round" src="images/speakers/phi_huynh.jpg" alt="Phi Huynh" />
               </div>
               <div class="col-12 col-sm-8">
                 <h3>Phi Huynh</h3>
@@ -300,6 +257,32 @@
                   </a>
                   <a href="https://www.facebook.com/trumxomcui/" class="speakersocial">
                     <i class="fa fa-facebook fa-fw"></i>
+                  </a>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div id="phuc-nguyen" class="col-12 col-sm-6 mb-5">
+            <div class="row">
+              <div class="col-12 col-sm-4">
+                <img class="w-100 mb-3 round" src="images/speakers/phuc_nguyen.jpeg" alt="Phuc Nguyen" />
+              </div>
+              <div class="col-12 col-sm-8">
+                <h3>Phuc Nguyen</h3>
+                <p>
+                  Phuc is Technical Architect, Agile coach at NashTech. He is passionate about applying
+                  agile methodologies and best
+                  practices to ensure quality and efficiency. He has experience in building and maintaining large-scale
+                  applications. He is creator of <a
+                    href="https://github.com/phucnt1992/azure-well-architected-framework-mindmap" target="_blank">Azure
+                    Well-Architected Framework Mind map</a>.
+                </p>
+                <p>
+                  <a href="https://github.com/phucnt1992/" class="speakersocial">
+                    <i class="fa fa-github fa-fw"></i>
+                  </a>
+                  <a href="https://www.linkedin.com/in/phucnt1992/" class="speakersocial">
+                    <i class="fa fa-linkedin fa-fw"></i>
                   </a>
                 </p>
               </div>
@@ -361,22 +344,36 @@
       <a href="//www.ganshani.com/?ref=azurebootcamp" target="_blank">Punit Ganshani</a>, Update by
       <a href="mailto:NTDevCafe@Nashtechglobal.com" target="_blank">DEV Cafe</a>, Theme
       <a href="//www.scoopthemes.com/templates/Oleose/Freeze/" target="_blank">Freeze</a>
-      ]
+
     </div>
   </footer>
-  <script src="lib/jquery/dist/jquery.js"></script>
-  <script src="lib/jquery-ui/jquery-ui.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"
+    integrity="sha512-DUC8yqWf7ez3JD1jszxCWSVB0DMP78eOyBpMa5aJki1bIRARykviOuImIczkxlj1KhVSyS16w2FSQetkD4UU2w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"
+    integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.2/js/bootstrap.min.js"
+    integrity="sha512-7rusk8kGPFynZWu26OKbTeI+QPoYchtxsmPeBqkHIEXJxeun4yJ4ISYe7C6sz9wdxeE1Gk3VxsIWgCZTc+vX3g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   <!-- Animation JS -->
-  <script src="js/slick.min.js" asp-append-version="true"></script>
-  <script src="js/placeholdem.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
+    integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.min.js"
+    integrity="sha512-PtVOPMHXzd2qpTrm80wlNFJ/sMALMA8Ub0Rifm6YUVzOvEdMhtmHPRNbPjRq9sUOZ8G96Iw0VMOSmK8nCQT26w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.countdown/2.2.0/jquery.countdown.min.js"
+    integrity="sha512-lteuRD+aUENrZPTXWFRPTBcDDxIGWe5uu0apPEn+3ZKYDwDaEErIK9rvR0QzUGmUQ55KFE2RqGTVoZsKctGMVw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <script src="js/placeholdem.min.js" asp-append-version="true"></script>
   <script src="js/rs-plugin/js/jquery.themepunch.plugins.min.js" asp-append-version="true"></script>
   <script src="js/rs-plugin/js/jquery.themepunch.revolution.min.js" asp-append-version="true"></script>
-  <script src="js/waypoints.min.js" asp-append-version="true"></script>
 
   <!--Custom JS-->
-
-  <script src="js/jquery.countdown.min.js" asp-append-version="true"></script>
   <script src="js/site.js" asp-append-version="true"></script>
   <script src="js/custom.js" asp-append-version="true"></script>
 
