--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
   <link rel="stylesheet" href="js/rs-plugin/css/settings.css" />
   <link rel="stylesheet" href="css/site.css" />
   <link rel="stylesheet" href="css/custom.css" />
+
+  <link rel="icon" href="images/favicon/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="images/favicon/site.webmanifest">
 </head>
 
 <body>
