add Thang Chung topic & description

--- a/index.html
+++ b/index.html
@@ -178,6 +178,24 @@
               </p>
             </div>
           </div>
+          <div class="row py-3 border-bottom">
+            <div class="col-12 col-sm-4 text-left text-sm-right">
+              10:00 AM - 10:45 AM
+            </div>
+            <div class="col-12 col-sm-8">
+              <p class="mb-0">
+                <strong>Building WebAssembly/WASI application (SpinApp) on AKS</strong>
+              </p>
+              <p class="mb-0">
+                <a href="#thang-chung">Thang Chung</a>
+              </p>
+              <p class="mb-0">
+                This presentation will briefly overview a new era of serverless with WebAssembly, orchestrating on Kubernetes (so-called SpinKube). 
+                Subsequently,  the architecture of SpinKube, and how it stands on the existing OSSes. 
+                Finally, we propose a model that can leverage the existing CNCF ecosystem (like Dapr, or KEDA) to build kind of event-driven apps.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
