Add Azure AI services topic.

--- a/index.html
+++ b/index.html
@@ -196,6 +196,22 @@
               </p>
             </div>
           </div>
+          <div class="row py-3 border-bottom">
+            <div class="col-12 col-sm-4 text-left text-sm-right">
+              10:45 AM - 11:30 AM
+            </div>
+            <div class="col-12 col-sm-8">
+              <p class="mb-0">
+                <strong>AI Services on Azure, a look into the future</strong>
+              </p>
+              <p class="mb-0">
+                <a href="#phi-huynh">Phi Huynh</a>
+              </p>
+              <p class="mb-0">
+                In this session, we will discuss on the latest insights of generative AI and latest developments on Azure Open AI services, Azure ML, Azure AI Studio and Copilots and how we can build innovative apps on Azure using these services.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
