add AI into event description

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 A haft day of <strong>deep dive</strong> sessions on Azure
                 for Developers and IT Pro's delivered by the experts to get
                 you started on complex topics like Containers, Kubernetes,
-                Microservices and Security
+                Microservices, Security and AI
               </p>
             </div>
           </div>
