add link to join

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
           <div class="row">
             <div class="col-md-12">
               <div id="divTimer" class="countdown"></div>
-              <a href="https://forms.office.com/r/YvE5qzGC00" target="_blank"
-                class="btn btn-primary register">register</a>
+              <a href="https://teams.microsoft.com/l/meetup-join/19%3ameeting_NjA1M2M2ZmUtM2JhMS00YWI1LTg2ZmUtNGJmYjk0Njk3Yzky%40thread.v2/0?context=%7b%22Tid%22%3a%22f4308c54-0208-43d3-afad-1f8df2f678b7%22%2c%22Oid%22%3a%2257a43e30-6e77-464d-a565-b6c4b6c26d7f%22%7d" target="_blank"
+                class="btn btn-primary register">It's happening. Click here to join</a>
             </div>
           </div>
         </div>
